--- a/index4.html
+++ b/index4.html
@@ -321,12 +321,12 @@
                         `;
                 const sidebarContent = document.getElementById('sidebar-content');
                 sidebarContent.innerHTML = `                  
-                            <p><b>tipologia_crono:</b> ${feature.properties.tipologia_crono}</p>
-                            <p><b>unidad_territorial:</b> ${feature.properties.unidad_territorial}</p>
-                            <p><b>descripcion:</b> ${feature.properties.descripcion}</p>
-                            <p><b>dataciones:</b> ${feature.properties.dataciones}</p>
-                            <p><b>fotos_cprl:</b> ${feature.properties.fotos_cprl}</p>
-                            <p><b>analisis_predimo:</b> ${feature.properties.analisis_predimo}</p>
+                            <p><b>Tipologia (cronología):</b> ${feature.properties.tipologia_crono}</p>
+                            <p><b>Unidad territorial:</b> ${feature.properties.unidad_territorial}</p>
+                            <p><b>Dscripción:</b> ${feature.properties.descripcion}</p>
+                            <p><b>Dataciones:</b> ${feature.properties.dataciones}</p>
+                            <p><b>Fotos CPRL:</b> ${feature.properties.fotos_cprl}</p>
+                            <p><b>Análisis predimo:</b> ${feature.properties.analisis_predimo}</p>
                         `;
                 sidebar.classList.add('open');
             });
