--- a/mano.html
+++ b/mano.html
@@ -1,3 +1,6 @@
+<!-- LEEME: 
+Fichero 3D obtenido en https://sketchfab.com/3d-models/mano-3d-ua-kcd-p6-b077081bd6b64e4cb1d1e97163be122f
+-->
 <!DOCTYPE html>
 <html lang="es">
 <head>
